--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "node server.ts",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.ts"
   },
   "keywords": [],
   "author": "",
